# alt-voice-old

./: .appveyor.yml  .gitignore  .gitmodules  .travic-ci.yml  .travis.yml  .travis_.yml  CMakeLists.txt  README.md  build.sh  vcbuild-ci.bat  vcbuild-local.bat  vcbuild.bat  vcbuild.ps1  xmake.lua
examples/: 3d-echo.cpp  3d-two-sources.cpp  devicetests.cpp
include/: I3DSoundOutput.h  IOpusDecoder.h  IOpusEncoder.h  ISoundInput.h  ISoundOutput.h  IStreamPlayer.h  VoiceError.h  alt-voice.h
src/: C3DSoundOutput.cpp  C3DSoundOutput.h  CDeviceManager.cpp  CDeviceManager.h  COpusDecoder.cpp  COpusDecoder.h  COpusEncoder.cpp  COpusEncoder.h  CRingBuffer.h  CSoundInput.cpp  CSoundInput.h  CSoundOutput.cpp  CSoundOutput.h  CStreamPlayer.cpp  CStreamPlayer.h  CVoiceException.h  alt-voice.cpp  helpers.h
